Fixed some spacing. Add portfolio to projects

--- a/src/style/sass/body/_about.scss
+++ b/src/style/sass/body/_about.scss
@@ -2,7 +2,7 @@
   padding-bottom: 25px;
   margin: auto;
   min-height: 80vh;
-  margin-bottom: 10vh;
+  margin-bottom: 5vh;
   .about-me {
     width: 80%;
     margin: auto;
@@ -12,11 +12,17 @@
     @media (min-width: $md) {
       width: 80%;
       margin: 0 auto;
+      margin-bottom: 100px;
     }
     .about-text {
       margin-bottom: 15px;
       line-height: 1.4rem;
       font-size: 1.2rem;
+      @media (min-width: $md) {
+        line-height: 1.6rem;
+        font-size: 1.6rem;
+        margin-bottom: 25px;
+      }
     }
   }
 }
