--- a/src/style/sass/body/_contact.scss
+++ b/src/style/sass/body/_contact.scss
@@ -2,6 +2,9 @@
   text-align: center;
   font-size: 1.4rem;
   margin-bottom: 15px;
+  @media (min-width: $md) {
+    margin-bottom: 5vh;
+  }
   .contact-icon-container {
     display: flex;
     justify-content: center;
