--- a/src/style/sass/body/_skills.scss
+++ b/src/style/sass/body/_skills.scss
@@ -12,6 +12,9 @@
     width: 80%;
     margin: auto;
     margin-bottom: 35px;
+    @media (min-width: $md) {
+      margin-bottom: 50px;
+    }
   }
   .logo {
     width: 80px;
