--- a/src/style/sass/components/_singleProjects.scss
+++ b/src/style/sass/components/_singleProjects.scss
@@ -11,6 +11,9 @@
   justify-content: center;
   margin-bottom: 25px;
   padding-top: 15px;
+  @media (min-width: $md) {
+    margin-bottom: 100px;
+  }
   // for flip
   perspective: 1000px;
   transition: transform 0.5s;
@@ -21,6 +24,17 @@
   }
   &:active {
     transform: rotateY(180deg);
+  }
+
+  .project-head {
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .project-title {
+      line-height: 1.3rem;
+      font-size: 1.5rem;
+    }
   }
 
   .project-content-front {
@@ -59,25 +73,32 @@
         object-position: center top;
       }
     }
-    .project-text {
+    .project-article {
       position: absolute;
       text-align: center;
       z-index: 1;
       top: 0;
       left: 0;
       margin: 15px;
+      .project-note {
+        font-weight: bold;
+        margin-bottom: 20px;
+      }
+    }
+    .project-head {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      .project-links {
+        display: flex;
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-evenly;
+
+        .project-icon {
+          width: 50px;
+        }
+      }
     }
   }
-}
-
-.project-head {
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.project-title {
-  line-height: 1.3rem;
-  font-size: 1.5rem;
 }
