--- a/src/style/sass/index.css
+++ b/src/style/sass/index.css
@@ -230,7 +230,7 @@
   padding-bottom: 25px;
   margin: auto;
   min-height: 80vh;
-  margin-bottom: 10vh;
+  margin-bottom: 5vh;
 }
 
 .about .about-me {
@@ -244,6 +244,7 @@
   .about .about-me {
     width: 80%;
     margin: 0 auto;
+    margin-bottom: 100px;
   }
 }
 
@@ -251,6 +252,14 @@
   margin-bottom: 15px;
   line-height: 1.4rem;
   font-size: 1.2rem;
+}
+
+@media (min-width: 481px) {
+  .about .about-me .about-text {
+    line-height: 1.6rem;
+    font-size: 1.6rem;
+    margin-bottom: 25px;
+  }
 }
 
 .projects {
@@ -283,6 +292,12 @@
   margin-bottom: 35px;
 }
 
+@media (min-width: 481px) {
+  .skills .row {
+    margin-bottom: 50px;
+  }
+}
+
 .skills .logo {
   width: 80px;
   margin: auto;
@@ -292,6 +307,12 @@
   text-align: center;
   font-size: 1.4rem;
   margin-bottom: 15px;
+}
+
+@media (min-width: 481px) {
+  .contact {
+    margin-bottom: 5vh;
+  }
 }
 
 .contact .contact-icon-container {
@@ -375,6 +396,12 @@
           transform-style: preserve-3d;
 }
 
+@media (min-width: 481px) {
+  .single-project {
+    margin-bottom: 100px;
+  }
+}
+
 .single-project:hover {
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
@@ -383,6 +410,24 @@
 .single-project:active {
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
+}
+
+.single-project .project-head {
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.single-project .project-head .project-title {
+  line-height: 1.3rem;
+  font-size: 1.5rem;
 }
 
 .single-project .project-content-front {
@@ -428,7 +473,7 @@
      object-position: center top;
 }
 
-.single-project .project-content-back .project-text {
+.single-project .project-content-back .project-article {
   position: absolute;
   text-align: center;
   z-index: 1;
@@ -437,22 +482,33 @@
   margin: 15px;
 }
 
-.project-head {
-  height: 50px;
+.single-project .project-content-back .project-article .project-note {
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.single-project .project-content-back .project-head {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.single-project .project-content-back .project-head .project-links {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  width: 100%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
-.project-title {
-  line-height: 1.3rem;
-  font-size: 1.5rem;
+.single-project .project-content-back .project-head .project-links .project-icon {
+  width: 50px;
 }
 
 .br {
